--- a/playwright/playwright/index.html
+++ b/playwright/playwright/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Test component page</title>
     </head>
-    <body id="root" class="g-root g-root_theme_light">
-        <script type="module" src="./index.tsx"></script>
-    </body>
+    <body id="root" class="g-root g-root_theme_light"></body>
+    <script type="module" src="./index.tsx"></script>
 </html>
